changed image url

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ text-decoration: none;
 }
 
 #box {
-    background-image: url(/images/survivorsCross.png);
+    background-image: url(https://www.pngkey.com/png/detail/57-574126_the-survivors-cross-heartbeat-semicolon-cross-tattoo.png);
     border-style: dotted;
     padding: 15px;
     width: 500px;
